# gmx-market-maker

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.example.yaml
docs/: PRD.md  PROJECT_SUMMARY.md  USE_CASES.md
scripts/: run_bot.py  run_web.py
src/gmx_mm/: __init__.py  cli.py  config.py
src/gmx_mm/execution/: __init__.py  executor.py  risk.py
src/gmx_mm/strategy/: __init__.py  balanced.py  base.py  engine.py  high_yield.py
src/gmx_mm/utils/: __init__.py  notifications.py
src/gmx_mm/web/: __init__.py  app.py
tests/: test_config.py  test_e2e.py  test_models.py  test_risk.py  test_strategy.py
